# UV Package Management Configuration
# Conda creates the environment, UV manages Python packages

[project]
name = "uv-conda-project"
version = "1.0.0"
description = "UV package management with Conda environment"
requires-python = ">=3.10"

# All Python packages managed by UV
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
# Optional dependency groups
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
viz = [
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]